--- a/.github/workflows/first_workflow.yml
+++ b/.github/workflows/first_workflow.yml
@@ -18,3 +18,18 @@ jobs:
           echo "Running step 3"
           sleep 5
           hostname
+  job2:
+      runs-on: ubuntu-latest
+      steps:
+        - name: run a single command on ubuntu machine Job 2
+          run: hostname
+        - name: step2
+          run: |
+            echo "Running step 2 on job 2"
+            sleep 5
+            hostname
+        - name: step3
+          run: |
+            echo "Running step 3 on job 2"
+            sleep 5
+            hostname
